--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.24.0
 pydantic==2.5.0
 pandas==2.1.0
 numpy==1.24.0
-scikit-learn==1.6.1
+scikit-learn
 scipy==1.11.0
 textblob==0.17.1
 nltk==3.8.1
